Fix layout to fit the screen in full-screen without scrollbars

--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -35,7 +35,7 @@
 // Map
 // --------------------------------------------------
 .leaflet-container {
-  width:  99%;
+  width:  100%;
   overflow: hidden;
   position: absolute;
   top: 100px;
@@ -48,10 +48,15 @@
 //
 // Layout
 // --------------------------------------------------
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
 #header {
   position: absolute;
   top: 0;
-  width: 99%;
+  width: 100%;
   height: 60px;
   background-color: @gray-lighter;
 
@@ -120,7 +125,7 @@ body.atouts #map-infos {
   right: 0;
 }
 #footer {
-  width: 99%;
+  width: 100%;
   position: absolute;
   bottom: 0;
   height: 60px;
@@ -128,6 +133,7 @@ body.atouts #map-infos {
 
   .address {
     display: inline-block;
+    vertical-align: middle;
     padding: 10px;
   }
 
@@ -152,7 +158,7 @@ body.atouts #map-infos {
 .navbar {
   position: absolute;
   top: 60px;
-  width: 99%;
+  width: 100%;
   min-height: 43px;
 
   ul {
